# libcsplit

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  README.mingw  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libcsplit-wiki.ini  libcsplit.ini  libcsplit.pc.in  libcsplit.spec.in
.travis/: runtests.sh  script.sh
common/: config.h.in  config_winapi.h
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libcsplit.h.in
include/libcsplit/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libcsplit/: Makefile.am  libcsplit.c  libcsplit.rc.in  libcsplit_definitions.h.in  libcsplit_error.c  libcsplit_error.h  libcsplit_extern.h  libcsplit_libcerror.h  libcsplit_libcstring.h  libcsplit_narrow_split_string.c  libcsplit_narrow_split_string.h  libcsplit_narrow_string.c  libcsplit_narrow_string.h  libcsplit_support.c  libcsplit_support.h  libcsplit_types.h  libcsplit_unused.h  libcsplit_wide_split_string.c  libcsplit_wide_split_string.h  libcsplit_wide_string.c  libcsplit_wide_string.h
manuals/: Makefile.am  libcsplit.3
msvscpp/: Makefile.am  libcsplit.sln
msvscpp/csplit_test_error/: csplit_test_error.vcproj
msvscpp/csplit_test_get_version/: csplit_test_get_version.vcproj
msvscpp/csplit_test_narrow_split_string/: csplit_test_narrow_split_string.vcproj
msvscpp/csplit_test_narrow_string/: csplit_test_narrow_string.vcproj
msvscpp/csplit_test_support/: csplit_test_support.vcproj
msvscpp/csplit_test_wide_split_string/: csplit_test_wide_split_string.vcproj
msvscpp/csplit_test_wide_string/: csplit_test_wide_string.vcproj
msvscpp/libcsplit/: libcsplit.vcproj
msvscpp/libcsplit_dll/: libcsplit_dll.vcproj
tests/: Makefile.am  csplit_test_error.c  csplit_test_get_version.c  csplit_test_libcerror.h  csplit_test_libcsplit.h  csplit_test_libcstring.h  csplit_test_macros.h  csplit_test_memory.c  csplit_test_memory.h  csplit_test_narrow_split_string.c  csplit_test_narrow_string.c  csplit_test_support.c  csplit_test_unused.h  csplit_test_wide_split_string.c  csplit_test_wide_string.c  pkgbuild.sh  runtests.sh  test_api_functions.ps1  test_api_functions.sh  test_api_types.ps1  test_api_types.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at
