include_HEADERS = \
	libcsplit.h

pkginclude_HEADERS = \
	libcsplit/definitions.h \
	libcsplit/error.h \
	libcsplit/extern.h \
	libcsplit/features.h \
	libcsplit/types.h

EXTRA_DIST = \
	libcsplit.h.in \
	libcsplit/definitions.h.in \
	libcsplit/features.h.in \
	libcsplit/types.h.in

DISTCLEANFILES = \
	libcsplit.h \
	libcsplit/definitions.h \
	libcsplit/features.h \
	libcsplit/types.h \
	Makefile \
	Makefile.in

