MSVSCPP_FILES = \
	csplit_test_error/csplit_test_error.vcproj \
	csplit_test_get_version/csplit_test_get_version.vcproj \
	csplit_test_narrow_split_string/csplit_test_narrow_split_string.vcproj \
	libcerror/libcerror.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsplit.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

