MSVSCPP_FILES = \
	csplit_test_error/csplit_test_error.vcproj \
	csplit_test_narrow_split_string/csplit_test_narrow_split_string.vcproj \
	csplit_test_narrow_string/csplit_test_narrow_string.vcproj \
	csplit_test_support/csplit_test_support.vcproj \
	csplit_test_wide_split_string/csplit_test_wide_split_string.vcproj \
	csplit_test_wide_string/csplit_test_wide_string.vcproj \
	libcerror/libcerror.vcproj \
	libcsplit/libcsplit.vcproj \
	libcsplit.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

